--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -23,6 +23,8 @@ fr:
   download: Télécharger
   "yes": Oui
   "no": Non
+  help: Aide
+  version: Version
   forgot_password: Mot de passe oublié?
   logout: Déconnexion
   auto_logout: Déconnexion automatique en
