Revert dropdown button styling, refs: #54716

--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -273,7 +273,7 @@ ch_be:
       title: 'Du bisch es Mitglied vo de fougende Teams:'
       team: Team
     new:
-      title: Nöis Team ersteue
+      title: Team ersteue
     description:
       private: Admins hei ke Zuegriff we si agwäut si
     show:
