--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -253,7 +253,7 @@ de:
       title: 'Sie sind Mitglied der folgenden Teams:'
       team: Team
     new:
-      title: Neues Team erstellen
+      title: Team erstellen
     edit:
       title: Team bearbeiten
     description:
