--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -254,7 +254,7 @@ de:
       team: Team
       no_content: Keine Einträge gefunden
     new:
-      title: Neues Team erstellen
+      title: Team erstellen
     edit:
       title: Team bearbeiten
     description:
