--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -244,7 +244,7 @@ fr:
     edit:
       title: Modifier l'équipe
     new:
-      title: Créer une nouvelle équipe
+      title: Nouvelle équipe
     description:
       private: Administrateurs auront pas accès à votre équipe.
     show:
