--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -200,7 +200,7 @@ ch_be:
     show:
       move: Account zumnä angere Ordner verschiebe
       title: "Accounts vom Ordner %{folder_name} vom Team %{team_name}"
-    no_folders: Ke Ordner
+    no_accounts: Ke Accounts
   file_entries:
     new:
       title: Ahang zum Account hinzuefüege
@@ -282,6 +282,7 @@ ch_be:
       members: Mitglider
       add_member: Mitglied hinzuefüege
       admins: Admins
+    no_folders: Ke Ordner
   profile:
     index:
       title: "S Profil vom %{label}"
