--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -46,6 +46,7 @@ de:
   close: Schliessen
   select_team: Wählen Sie bitte ein Team aus oder nutzen Sie die Suche
   role: Rolle
+  empty: leer
 
   i18n:
     language:
