--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -46,6 +46,7 @@ de:
   close: Schliessen
   select_team: Wählen Sie bitte ein Team aus oder nutzen Sie die Suche
   role: Rolle
+  empty: leer
 
   i18n:
     language:
@@ -252,7 +253,6 @@ de:
     index:
       title: 'Sie sind Mitglied der folgenden Teams:'
       team: Team
-      no_content: Keine Einträge gefunden
     new:
       title: Team erstellen
     edit:
