--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -45,6 +45,7 @@ en:
   close: Close
   select_team: Please select a team or use the search
   role: Role
+  empty: empty
 
   i18n:
     language:
@@ -243,7 +244,6 @@ en:
     index:
       title: "You are member of the following teams:"
       team: Team
-      no_content: No entries Found
     new:
       title: New Team
     edit:
