--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -47,6 +47,7 @@ fr:
   close: fermer
   select_team: Veuillez sélectionner une équipe ou utiliser la recherche
   role: Rôle
+  empty: vide
 
   i18n:
     language:
@@ -240,7 +241,6 @@ fr:
     index:
       title: "Vous êtes membre des équipes suivantes:"
       team: Équipe
-      no_content: Aucune donnée trouvée
     edit:
       title: Modifier l'équipe
     new:
