Translate validation errors, refs: #54773

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -440,3 +440,19 @@ en:
       team:
         name: Name
         description: Description
+
+  validations:
+    name:
+      present: Name must be present
+      too_long: Name is too long
+    description:
+      too_long: Description is too long
+    file:
+      present: File must be present
+    team:
+      present: Team must be present
+    folder:
+      present: Folder must be present
+    accountname:
+      present: Accountname must be present
+      too_long: Accountname is too long
