--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -519,3 +519,19 @@ de:
     team_policy:
       update?:  Du bist nicht Mitglied dieses Teams
       destroy?: Nur Admins dürfen Teams löschen
+
+  validations:
+    name:
+      present: Der Name muss vorhanden sein
+      too_long: Der Name ist zu lang
+    description:
+      too_long: Die Beschreibung ist zu lang
+    file:
+      present: Die Datei muss vorhanden sein
+    team:
+      present: Das Team muss vorhanden sein
+    folder:
+      present: Der Ordner muss vorhanden sein
+    accountname:
+      present: Der Accountname muss vorhanden sein
+      too_long: Der Accountname ist zu lang
