--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -41,6 +41,8 @@ ch_be:
   new: Nöi
   save: Spichere
   close: Schliesse
+  hi_user: "Hoi, "
+  intro: Suechsch äuä es Passwort?
   user: Benutzer
   select_team: Wähl bitte es team us oder benutz d suechi
   role: Rollä
