--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -44,8 +44,11 @@ de:
   new: Neu
   save: Speichern
   close: Schliessen
+  hi_user: "Hi, "
+  intro: Du suchst ein Passwort?
   select_team: Wählen Sie bitte ein Team aus oder nutzen Sie die Suche
   role: Rolle
+  empty: leer
 
   i18n:
     language:
@@ -252,7 +255,6 @@ de:
     index:
       title: 'Sie sind Mitglied der folgenden Teams:'
       team: Team
-      no_content: Keine Einträge gefunden
     new:
       title: Team erstellen
     edit:
