--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -43,8 +43,10 @@ en:
   new: New
   save: Save
   close: Close
-  select_team: Please select a team or use the search
+  hi_user: "Hi,"
+  intro: Looking for a password?
   role: Role
+  empty: empty
 
   i18n:
     language:
@@ -243,7 +245,6 @@ en:
     index:
       title: "You are member of the following teams:"
       team: Team
-      no_content: No entries Found
     new:
       title: New Team
     edit:
