--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -45,8 +45,11 @@ fr:
   new: Nouveau
   save: Sauvegarder
   close: fermer
+  hi_user: "Salut, "
+  intro: Vous cherchez un mot de passe?
   select_team: Veuillez sélectionner une équipe ou utiliser la recherche
   role: Rôle
+  empty: vide
 
   i18n:
     language:
@@ -240,7 +243,6 @@ fr:
     index:
       title: "Vous êtes membre des équipes suivantes:"
       team: Équipe
-      no_content: Aucune donnée trouvée
     edit:
       title: Modifier l'équipe
     new:
