Fix validation bugs and missing translations

--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -522,3 +522,7 @@ ch_be:
     accountname:
       present: Dr Accountname muess vorhande si
       too_long: Dr Accountname isch zläng
+    cleartext username:
+      too_long: Dr Benutzername isch zläng
+    cleartext password:
+      too_long: Ds Passwort isch zläng
