--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -537,3 +537,7 @@ de:
     accountname:
       present: Der Accountname muss vorhanden sein
       too_long: Der Accountname ist zu lang
+    cleartext username:
+      too_long: Der Benutzername ist zu lang
+    cleartext password:
+      too_long: Das Passwort ist zu lang
