--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -161,6 +161,7 @@ fr:
         num_folders: Nombre de dossiers
         num_accounts: Nombre de comptes
         members: Membres
+        no_content: Aucun résultat trouvé
     user_roles:
       user: Utilisateur
       conf_admin: Conf Admin
