--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -276,6 +276,7 @@ ch_be:
       title: 'Du bisch es Mitglied vo de fougende Teams:'
       team: Team
       no_content: Ke Resultat
+      search: Suechresultat für
     new:
       title: Team ersteue
     description:
