add error for duplicate account

--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -522,6 +522,7 @@ ch_be:
     accountname:
       present: Dr Accountname muess vorhande si
       too_long: Dr Accountname isch zläng
+      duplicate_name: Dä Account giz scho!
     cleartext username:
       too_long: Dr Benutzername isch zläng
     cleartext password:
