--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -532,6 +532,7 @@ fr:
     accountname:
       present: Le nom du compte doit être présent
       too_long: Le nom du compte est trop long
+      duplicate_name: Le compte existe déjà!
     cleartext username:
       too_long: Le nom d'utilisateur est trop long
     cleartext password:
