--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -180,6 +180,9 @@ de:
       move: Account zu einem anderen Ordner verschieben
       title: "Accounts des Ordners %{folder_name} des Teams %{team_name}"
     no_accounts: Keine Accounts
+    tooltips:
+      delete: Ordner löschen
+      edit: Ordner bearbeiten
 
   file_entries:
     new:
@@ -264,6 +267,9 @@ de:
       private: Admins haben keinen Zugriff wenn angewählt
     configure:
       title: Teammitglieder und Api Nutzer anpassen
+    delete: Team löschen
+    favorise: Team favorisieren
+    defavorise: Team entfavorisieren
     no_folders: Keine Ordner
 
   profile:
@@ -515,6 +521,11 @@ de:
     weak: Das Passwort ist unsicher
     good: Das Passwort genügt
     strong: Das Passwort ist stark!
+
+  tooltips:
+    all_teams: Alle Teams
+    favorites: Favoriten
+    settings_profile: Einstellungen & Profil
 
   #Pundit
   pundit:
