--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -170,15 +170,18 @@ fr:
     title: Dossiers
     name: Nom du dossier
     index_menu:
-      create: Créer groupe
+      create: Créer dossier
     edit:
-      title: Modifier le groupe
+      title: Modifier le dossier
     new:
-      title: Nouveau groupe
+      title: Nouveau dossier
     show:
-      move: Déplacer compte à un autre groupe
+      move: Déplacer compte à un autre dossier
       title: "Comptes du dossier %{folder_name} de l'équipe %{team_name}"
     no_accounts: Pas de comptes
+    tooltips:
+      delete: Supprimer le dossier
+      edit: Modifier le dossier
   file_entries:
     new:
       title: Ajouter un attachement au compte
@@ -259,6 +262,9 @@ fr:
       admins: Admins
     configure:
       title: Adjuster les membres d'équipe et les utilisateurs d'API
+    delete: Supprimer l'équipe
+    favorise: Favoriser l'équipe
+    defavorise: Dé-privilégier l'équipe
     no_folders: Pas de dossiers
   profile:
     index:
@@ -325,10 +331,10 @@ fr:
       added: Membre de l'équipe a été enlevé avec succès
       removed: Membre de l'équipe a été ajouté avec succès
     errors:
-      auth_failed: Échec de l'authentification
-      user_not_logged_in: Utilisateur non connecté
-      invalid_request: Demande non valable
-      record_not_found: Enregistrement non trouvé
+        auth_failed: Échec de l'authentification
+        user_not_logged_in: Utilisateur non connecté
+        invalid_request: Demande non valable
+        record_not_found: Enregistrement non trouvé
     wizard:
       fill_password_fields: S'il vous plaît remplir tous les champs
       paswords_do_not_match: Les mots de passe ne correspondent pas
@@ -512,6 +518,11 @@ fr:
     good: Le mot de passe est bon
     strong: Le mot de passe est forte!
 
+  tooltips:
+    all_teams: Tous les équipes
+    favorites: Favoris
+    settings_profile: Paramètres & Profil
+
   #Pundit
   pundit:
     default: Accès refusé
@@ -534,11 +545,8 @@ fr:
     accountname:
       present: Le nom du compte doit être présent
       too_long: Le nom du compte est trop long
-<<<<<<< HEAD
       duplicate_name: Le compte existe déjà!
     cleartext username:
       too_long: Le nom d'utilisateur est trop long
     cleartext password:
       too_long: Le mot de passe est trop long
-=======
->>>>>>> Add translations
