--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -160,7 +160,6 @@ en:
         num_folders: Number of Folders
         num_accounts: Number of Accounts
         members: Members
-        no_content: No matches
     user_roles:
       user: User
       conf_admin: Conf Admin
@@ -179,6 +178,9 @@ en:
       move: Move account to other folder
       title: "Accounts in folder %{folder_name} for team %{team_name}"
     no_accounts: No Accounts
+    tooltips:
+      delete: Delete the folder
+      edit: Edit the folder
   file_entries:
     new:
       title: Add new attachment to account
@@ -246,6 +248,8 @@ en:
     index:
       title: "You are member of the following teams:"
       team: Team
+      no_content: No matches
+      search: Search results for
     new:
       title: New Team
     edit:
@@ -260,6 +264,9 @@ en:
       admins: Admins
     configure:
       title: Edit Team Members and Api Users
+    delete: Delete the team
+    favorise: Favorise the team
+    defavorise: Defavorise the team
     no_folders: No Folders
   profile:
     index:
@@ -429,6 +436,12 @@ en:
     weak: The password is weak
     good: The password is good
     strong: The password is strong!
+
+  tooltips:
+    all_teams: All Teams
+    favorites: Favorites
+    settings_profile: Settings & Profile
+
 
   #Pundit
   pundit:
