--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -161,7 +161,6 @@ fr:
         num_folders: Nombre de dossiers
         num_accounts: Nombre de comptes
         members: Membres
-        no_content: Aucun résultat trouvé
     user_roles:
       user: Utilisateur
       conf_admin: Conf Admin
@@ -171,15 +170,18 @@ fr:
     title: Dossiers
     name: Nom du dossier
     index_menu:
-      create: Créer groupe
+      create: Créer dossier
     edit:
-      title: Modifier le groupe
+      title: Modifier le dossier
     new:
-      title: Nouveau groupe
+      title: Nouveau dossier
     show:
-      move: Déplacer compte à un autre groupe
+      move: Déplacer compte à un autre dossier
       title: "Comptes du dossier %{folder_name} de l'équipe %{team_name}"
     no_accounts: Pas de comptes
+    tooltips:
+      delete: Supprimer le dossier
+      edit: Modifier le dossier
   file_entries:
     new:
       title: Ajouter un attachement au compte
@@ -244,6 +246,8 @@ fr:
     index:
       title: "Vous êtes membre des équipes suivantes:"
       team: Équipe
+      no_content: Aucun résultat trouvé
+      search: Résultats pour
     edit:
       title: Modifier l'équipe
     new:
@@ -258,6 +262,9 @@ fr:
       admins: Admins
     configure:
       title: Adjuster les membres d'équipe et les utilisateurs d'API
+    delete: Supprimer l'équipe
+    favorise: Favoriser l'équipe
+    defavorise: Dé-privilégier l'équipe
     no_folders: Pas de dossiers
   profile:
     index:
@@ -320,14 +327,14 @@ fr:
         unlock: "%{username} n'est plus bloqué"
         token:
           renew: "%{username} a été renouvelé, nouveau jeton: %{token}"
-    members:
-      added: Membre de l'équipe a été enlevé avec succès
-      removed: Membre de l'équipe a été ajouté avec succès
-    errors:
-        auth_failed: Échec de l'authentification
-        user_not_logged_in: Utilisateur non connecté
-        invalid_request: Demande non valable
-        record_not_found: Enregistrement non trouvé
+      members:
+        added: Membre de l'équipe a été enlevé avec succès
+        removed: Membre de l'équipe a été ajouté avec succès
+      errors:
+          auth_failed: Échec de l'authentification
+          user_not_logged_in: Utilisateur non connecté
+          invalid_request: Demande non valable
+          record_not_found: Enregistrement non trouvé
     wizard:
       fill_password_fields: S'il vous plaît remplir tous les champs
       paswords_do_not_match: Les mots de passe ne correspondent pas
@@ -510,6 +517,11 @@ fr:
     weak: Le mot de passe est faible
     good: Le mot de passe est bon
     strong: Le mot de passe est forte!
+
+  tooltips:
+    all_teams: Tous les équipes
+    favorites: Favoris
+    settings_profile: Paramètres & Profil
 
   #Pundit
   pundit:
