--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -441,6 +441,8 @@ en:
     all_teams: All Teams
     favorites: Favorites
     settings_profile: Settings & Profile
+    add_folder: Add a new Folder
+    add_account: Add a new Account
 
 
   #Pundit
