--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -526,6 +526,8 @@ de:
     all_teams: Alle Teams
     favorites: Favoriten
     settings_profile: Einstellungen & Profil
+    add_folder: Erstelle einen neuen Ordner
+    add_account: Erstelle einen neuen Account
 
   #Pundit
   pundit:
