--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -522,6 +522,11 @@ fr:
     all_teams: Tous les équipes
     favorites: Favoris
     settings_profile: Paramètres & Profil
+    add_folder: Ajouter un dossier
+    add_account: Ajouter un compte
+    account_details: Montrer détails du compte
+    delete_folder: Supprimer le dossier
+    delete_account: Supprimer le compte
 
   #Pundit
   pundit:
