--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -340,6 +340,7 @@ ch_be:
         user_not_logged_in: Benutzer isch nid igloggt
         invalid_request: Invalidi Ahfrag
         record_not_found: Ihtrag isch nid gfunde worde
+        delete_failed: Ihtrag het nid chenne g'löscht wärde
     wizard:
       fill_password_fields: Bitte füu aui Fäuder us
       paswords_do_not_match: D Passwörter stimme nid überi
