--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -345,6 +345,7 @@ de:
         user_not_logged_in: Benutzer ist nicht eingeloggt
         invalid_request: Invalide Anfrage
         record_not_found: Eintrag nicht gefunden
+        delete_failed: Eintrag konnte nicht gelöscht werden
     wizard:
       fill_password_fields: Bitte füllen Sie alle Felder aus
       paswords_do_not_match: Die Passwörter stimmen nicht überein
