--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -265,6 +265,7 @@ ch_be:
   teams:
     title: Teams
     none_available: Kener Teams verfüegbar
+    loading: Am lade ...
     edit:
       title: Team bearbeite
     configure:
