--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -532,6 +532,7 @@ fr:
     account_details: Montrer détails du compte
     delete_folder: Supprimer le dossier
     delete_account: Supprimer le compte
+    configure: Configurer les membres
 
   #Pundit
   pundit:
