--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -337,6 +337,8 @@ de:
         unlock: "%{username} wurde entsperrt"
         token:
           renew: "%{username} wurde erneuert, neues Token: %{token}"
+        ccli_login:
+          copied: CCLI Login Befehl wurde kopiert
       members:
         added: Mitglied wurde erfolgreich hinzugefügt
         removed: Mitglied wurde erfolgreich entfernt
